[gd_scene load_steps=6 format=2]

[ext_resource path="res://grill/Grill.gd" type="Script" id=1]
[ext_resource path="res://UI/ProgressBar/ProgressBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://grill/GrillBody/GrillBody.tscn" type="PackedScene" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://grill/UI/InteractMenu/InteractMenu.tscn" type="PackedScene" id=5]

[node name="Grill" type="Position2D"]
script = ExtResource( 1 )
selected_color = Color( 0.960784, 1, 0.67451, 1 )
not_selected_color = Color( 1, 1, 1, 1 )
red = Color( 1, 0, 0, 1 )
yellow = Color( 0.968627, 1, 0, 1 )

[node name="ProgressBar" parent="." instance=ExtResource( 2 )]
visible = false
margin_left = -20.0
margin_top = -66.5855
margin_right = 30.0
margin_bottom = -52.5855
yellow = Color( 0.960784, 0.921569, 0, 1 )

[node name="GrillBody" parent="." instance=ExtResource( 3 )]
position = Vector2( -3.05176e-005, 0 )
z_index = 0
selected_color = Color( 0.827451, 1, 0, 1 )

[node name="CharacterHolder" type="Position2D" parent="GrillBody"]
visible = false
position = Vector2( -40, 0 )

[node name="icon" type="Sprite" parent="GrillBody/CharacterHolder"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 0, -32.36 )
scale = Vector2( 0.01, 1.07 )
texture = ExtResource( 4 )

[node name="InteractMenu" parent="." instance=ExtResource( 5 )]
position = Vector2( 150, 20 )
scale = Vector2( 1, 1 )
z_index = 9

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
build_mode = 1
polygon = PoolVector2Array( -50, 30, 20, -10, 0, -20, -70, 20 )

[connection signal="state_changed" from="." to="GrillBody" method="_on_Grill_state_changed"]
[connection signal="state_changed" from="." to="InteractMenu" method="_on_Grill_state_changed"]
[connection signal="visibility_changed" from="." to="." method="_on_Grill_visibility_changed"]
[connection signal="bar_filled" from="ProgressBar" to="." method="_on_ProgressBar_bar_filled"]
[connection signal="value_changed" from="ProgressBar" to="GrillBody" method="_on_ProgressBar_value_changed"]
[connection signal="click_on_grill_body" from="GrillBody" to="InteractMenu" method="_on_GrillBody_click_on_grill_body"]
[connection signal="button_cancel_down" from="InteractMenu" to="." method="_on_InteractMenu_button_cancel_down"]
[connection signal="button_clear_down" from="InteractMenu" to="." method="_on_InteractMenu_button_clear_down"]
[connection signal="button_cook_down" from="InteractMenu" to="." method="_on_InteractMenu_button_cook_down"]
[connection signal="button_meat_down" from="InteractMenu" to="." method="_on_InteractMenu_button_meat_down"]
[connection signal="button_recharge_down" from="InteractMenu" to="." method="_on_InteractMenu_button_recharge_down"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
